--- a/main.css
+++ b/main.css
@@ -22,6 +22,11 @@ hr {
 	margin: 0;
 }
 
+.character.highlighted {
+	background-color: #ffff80;
+	font-weight: bolder;
+}
+
 .container {
 	width: 100vw;
 	height: 100vh;
